--- a/templates/house/house_detail.html
+++ b/templates/house/house_detail.html
@@ -6,6 +6,8 @@
     <script src="{{ url_for('static', filename='js/common/message-toast.js') }}"></script>
     <!-- 引入房源详情页面JS -->
     <script src="{{ url_for('static', filename='js/house/house_detail.js') }}"></script>
+    <!-- 引入地图详情组件 -->
+    <script src="{{ url_for('static', filename='js/house/map_detail.js') }}"></script>
 {% endblock %}
 
 {% block title %}{{ house.house_name }} - 房源详情{% endblock %}
